--- a/app/assets/stylesheets/active_admin.scss
+++ b/app/assets/stylesheets/active_admin.scss
@@ -1,17 +1,9 @@
-// Sass variable overrides must be declared before loading up Active Admin's styles.
-//
-// To view the variables that Active Admin provides, take a look at
-// `app/assets/stylesheets/active_admin/mixins/_variables.scss` in the
-// Active Admin source.
-//
-// For example, to change the sidebar width:
-// $sidebar-width: 242px;
-
-// Active Admin's got SASS!
+$primary-color: #0368d9;
+@import 'activeadmin_addons/all';
 @import "active_admin/mixins";
-@import "active_admin/base";
-
-// Overriding any non-variable Sass must be done after the fact.
-// For example, to change the default status-tag color:
-//
-//   .status_tag { background: #6090DB; }
+@import "arctic_admin/base";
+@import "admin/select2";
+@import "admin/admin";
+.primary-color {
+    color: $primary-color;
+}
